--- a/payroll/src/App.css
+++ b/payroll/src/App.css
@@ -1,38 +1,57 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.App>*{
+  margin: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input_basic,.input_ot{
+  width: 15%;
+  height: 2rem;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+  font-size: large;
+}
+
+.btn_cal{
+  width: 15%;
+  height: 2rem;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: lightblue;
+  color: black;
+  font-size: large;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn_cal:hover{
+  width: 16%;
+  height: 2.3rem;
+  background-color: greenyellow;
+}
+
+.title{
+ padding: 25px;
+}
+
+
+tbody,th {
+  background-color: white;
+  color: black;
+  text-align: left;
+}
+
+tbody tr:nth-child(even) th {
+  background-color: #25c;
 }
