--- a/payroll/src/App.css
+++ b/payroll/src/App.css
@@ -45,13 +45,41 @@ input[type=number] {
  padding: 25px;
 }
 
+.styled-table {
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  font-family: sans-serif;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
 
-tbody,th {
-  background-color: white;
-  color: black;
+.styled-table thead tr {
+  background-color: #009879;
+  color: #ffffff;
   text-align: left;
 }
 
-tbody tr:nth-child(even) th {
-  background-color: #25c;
+.styled-table tbody tr {
+  border-bottom: 1px solid #dddddd;
 }
+
+.styled-table tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:last-of-type {
+  border-top: 2px solid #009879;
+  border-bottom: 2px solid #009879;
+}
+
+.styled-table tbody tr.active-row {
+  font-weight: bold;
+  color: #009879;
+}
+.title-table{
+  text-align: center;
+  padding: 2px;
+  font-weight: bold;
+}
+
