added para info showing app development stage

--- a/payroll/src/App.css
+++ b/payroll/src/App.css
@@ -83,3 +83,9 @@ input[type=number] {
   font-weight: bold;
 }
 
+.info{
+  width: 50%;
+  padding: 20px;
+  font-size: small;
+  font-weight: bold;
+}
