added nett pay logic and css

--- a/payroll/src/App.css
+++ b/payroll/src/App.css
@@ -10,7 +10,7 @@
   margin: 5px;
 }
 
-.input_basic,.input_ot,.total_salary{
+.input_basic,.input_ot{
   width: 15%;
   height: 2rem;
   padding: 10px;
@@ -88,4 +88,24 @@ input[type=number] {
   padding: 20px;
   font-size: small;
   font-weight: bold;
+}
+
+.nett_pay{
+  color: blue;
+  font-size: larger;
+  font-weight: bold;
+  width: 15%;
+  height: 2rem;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.total_salary{
+  color: green;
+  font-size: larger;
+  font-weight: bold;
+  width: 15%;
+  height: 2rem;
+  padding: 10px;
+  border-radius: 5px;
 }
